...
                        Padding(
                          padding: EdgeInsetsDirectional.fromSTEB(
                              0.0, 0.0, 0.0, 16.0),
                          child: Container(
                            width: double.infinity,
                            child: TextFormField(
                              key: ValueKey('emailAddress_Create_2cvo'),
                              controller:
                                  _model.emailAddressCreateTextController,
                              focusNode: _model.emailAddressCreateFocusNode,
                              onChanged: (_) => EasyDebounce.debounce(
                                '_model.emailAddressCreateTextController',
                                Duration(milliseconds: 2000),
...
                        Padding(
                          padding: EdgeInsetsDirectional.fromSTEB(
                              0.0, 0.0, 0.0, 16.0),
                          child: Container(
                            width: double.infinity,
                            child: TextFormField(
                              key: ValueKey('password_Create_lung'),
                              controller: _model.passwordCreateTextController,
                              focusNode: _model.passwordCreateFocusNode,
                              autofocus: false,
                              textInputAction: TextInputAction.next,
                              obscureText: !_model.passwordCreateVisibility,
                              decoration: InputDecoration(
...
                        Padding(
                          padding: EdgeInsetsDirectional.fromSTEB(
                              0.0, 0.0, 0.0, 16.0),
                          child: Container(
                            width: double.infinity,
                            child: TextFormField(
                              key: ValueKey('password_CreateConfirm_g8z7'),
                              controller:
                                  _model.passwordCreateConfirmTextController,
                              focusNode: _model.passwordCreateConfirmFocusNode,
                              autofocus: false,
                              textInputAction: TextInputAction.done,
                              obscureText:
...
                        Align(
                          alignment: AlignmentDirectional(0.0, 0.0),
                          child: Padding(
                            padding: EdgeInsetsDirectional.fromSTEB(
                                0.0, 0.0, 0.0, 16.0),
                            child: FFButtonWidget(
                              key: ValueKey('Get_Started_Button_ji47'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'CREATE_ACCOUNT_TEST1_Get_Started_Button_');
                                logFirebaseEvent(
                                    'Get_Started_Button_validate_form');
                                if (_model.formKey.currentState == null ||
...
