...
                        Padding(
                          padding: EdgeInsetsDirectional.fromSTEB(
                              0.0, 0.0, 0.0, 16.0),
                          child: Container(
                            width: double.infinity,
                            child: TextFormField(
                              key: ValueKey('emailAddress_mabs'),
                              controller: _model.emailAddressTextController,
                              focusNode: _model.emailAddressFocusNode,
                              onChanged: (_) => EasyDebounce.debounce(
                                '_model.emailAddressTextController',
                                Duration(milliseconds: 2000),
                                () => safeSetState(() {}),
...
                        Padding(
                          padding: EdgeInsetsDirectional.fromSTEB(
                              0.0, 0.0, 0.0, 16.0),
                          child: Container(
                            width: double.infinity,
                            child: TextFormField(
                              key: ValueKey('password_4lwi'),
                              controller: _model.passwordTextController,
                              focusNode: _model.passwordFocusNode,
                              autofocus: false,
                              obscureText: !_model.passwordVisibility,
                              decoration: InputDecoration(
                                labelText: 'Password',
...
                          ),
                        ),
                        Align(
                          alignment: AlignmentDirectional(0.0, 0.0),
                          child: Builder(
                            builder: (context) => FFButtonWidget(
                              key: ValueKey('Button_8ges'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'LOGIN_COPY_PAGE_SIGN_IN_BTN_ON_TAP');
                                logFirebaseEvent('Button_auth');
                                GoRouter.of(context).prepareAuthEvent(true);

...
