...
                        mainAxisSize: MainAxisSize.max,
                        children: [
                          wrapWithModel(
                            model: _model.glowingButtonModel,
                            updateCallback: () => safeSetState(() {}),
                            child: GlowingButtonWidget(
                              key: ValueKey('GlowingButton_6xa6'),
                            ),
                          ),
                          Padding(
                            padding: EdgeInsetsDirectional.fromSTEB(
                                5.0, 20.0, 0.0, 80.0),
                            child: InkWell(
...
                                    'GET_STARTED_PAGE_Text_yn2xokvq_ON_TAP');
                                logFirebaseEvent('Text_navigate_to');

                                context.pushNamed(LoginCopyWidget.routeName);
                              },
                              child: Text(
                                key: ValueKey('Text_d2nc'),
                                'Already have an account? Sign in',
                                style: FlutterFlowTheme.of(context)
                                    .bodyMedium
                                    .override(
                                      font: GoogleFonts.inter(
                                        fontWeight: FlutterFlowTheme.of(context)
...
